test/fixtures/source-map/output/source_map_throw_icu.snapshot
*/test/fixtures/source-map/icu.jsx:3
    ("ã‚ ğŸ• ğŸ•", throw Error("an error"));
     ^


Error: an error
    at Object.createElement (*/test/fixtures/source-map/icu.jsx:3:23)
    at Object.<anonymous> (*/test/fixtures/source-map/icu.jsx:9:5)

Node.js *
